2008-07-16  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel-tcp-stream-ssl.c: added
	some code that properly checks the result of the call to
	NSS_InitReadWrite.

2008-07-04  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel.c:
	Drop usage of PR_Cleanup on shutting down camel, as this is not safe,
	nor required. This method is responsible for freeing the common
	threads management code, including the lock that's accessed on the
	crash in __nptl_deallocate_tsd.

2008-07-01  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel-provider.[ch]:
        Now providers offer a new shutdown handler, that will be
        called on shutting down camel.

	* libtinymail-camel/camel-lite/camel/camel.c:
        Use the providers shutdown handler on shutting down camel.

	* libtinymail-camel/camel-lite/camel/providers/pop3/camel-pop3-provider.c:
        Implement new provider shutdown handler, to kill the login delay
        threads on shutting down tinymail.

	* libtinymail-camel/camel-lite/camel/providers/pop3/camel-pop3-store.[ch]:
        New method to kill the login delay thread. This is used to kill
        the thread on shutting down tinymail.

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-provider.c:
        Set as NULL the default shutdown handler.

	* libtinymail-camel/tny-camel-pop-store-account.c:
        Manage properly the internal inbox reference to avoid leaking it.

	* libtinymail-camel/camel-lite/camel/camel-mime-utils.c:
        Parse properly broken rfc2047 recipient headers sent from gmail imap.

2008-06-26  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed LIST (SUBSCRIBED) for some IMAP servers

2008-06-25  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c
	(..._get_header_pairs_default): we were leaking all the TnyPair objects
	created here. Fixed.
