@@ -773,6 +773,7 @@ static struct {
 	{ "CONVERT",		IMAP_CAPABILITY_CONVERT },
 	{ "LIST-EXTENDED",	IMAP_CAPABILITY_LISTEXT },
 	{ "COMPRESS=DEFLATE",	IMAP_CAPABILITY_COMPRESS },
+	{ "XAOL-NETMAIL",       IMAP_CAPABILITY_XAOLNETMAIL },
 	{ NULL, 0 }
 };
 
